Funkcni alokace a inicializace sdilenych (nefunkcnich) front.

--- a/readme.html
+++ b/readme.html
@@ -90,6 +90,8 @@
     <li>Slides ze cviceni</li>
     <li>Priklady ze cviceni</li>
     <li>manualove stranky</li>
+    <li><a href="http://www.cs.utah.edu/dept/old/texinfo/glibc-manual-0.02/library_21.html" title="The GNU C Library - Signal Handling">The GNU C Library - Signal Handling</a></li>
+    <li><a href="http://www.cplusplus.com/reference/stl/queue/queue.html" title="queue::queue - C++ Reference">queue::queue - C++ Reference</a></li>
   </ol>
   
 </body>
